{
    "name": "BoardInput",
    "maps": [
        {
            "name": "Board",
            "id": "b45bc684-1a2d-46dc-889b-23070c217772",
            "actions": [
                {
                    "name": "Clear",
                    "type": "Button",
                    "id": "c2ba927c-c1ea-4a56-b56e-213e5b0b7444",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetNumber1",
                    "type": "Button",
                    "id": "4e578e01-7974-43bb-aa73-ffb1892ccc06",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetNumber2",
                    "type": "Button",
                    "id": "e5cd80c1-2cdf-4abc-a9ae-2f8ec911e8d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetNumber3",
                    "type": "Button",
                    "id": "8a993f41-682b-483f-b7ae-fc6a4ca9f995",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetNumber4",
                    "type": "Button",
                    "id": "08ffee84-03ef-4283-9855-6eb6e9f393d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetNumber5",
                    "type": "Button",
                    "id": "a785bf98-031f-4ab7-9d2b-0d9288336c77",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetNumber6",
                    "type": "Button",
                    "id": "6a52661f-1b11-4232-9355-7deb72d711ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetNumber7",
                    "type": "Button",
                    "id": "a5b2f5d6-483b-4c73-9555-b0e3f52eac92",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetNumber8",
                    "type": "Button",
                    "id": "0918bb9f-d0cb-4ff6-87e8-498edf179c35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetNumber9",
                    "type": "Button",
                    "id": "8ed29518-63ce-4360-8323-e91ba53947d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "92d3a1fc-3a66-49cf-a80c-1b87b3769205",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Clear",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b620130-c10e-4f07-ab99-113f4397627a",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Clear",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76d4cf3d-6ead-4a17-b308-b99166ca2a2b",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetNumber1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3548f0e2-dd02-43fd-a3df-6fb5333c8c5c",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetNumber2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c069327-d301-4b71-86dd-f98cd1bed470",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetNumber3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8abadf96-b79c-420e-84d2-7c5f8711bfb1",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetNumber4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efd6cfb0-7f99-4bf8-90f6-e702716cc557",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetNumber5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2cb2665-be80-47f7-8163-55d33e4eaf5f",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetNumber6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94d10a37-7512-42a8-be8e-958ee4b22d3c",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetNumber7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4dc2cd0d-d098-4e20-9c11-d91490069530",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetNumber8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0f71bbe-9e84-4c1b-9948-8d39dc5ec059",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetNumber9",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}